<resources>
    <string name="app_name">" كراجي"</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="offer">Offer</string>
    <string name="post_add">PostAd</string>
    <string name="title_activity_level_one_menu">@string/karajat</string>
    <string name="title_activity_level_two_menu">@string/karajat</string>
    <string name="font_alhambra">alhambra.ttf</string>
    <string name="font_calibre_light">Calibre-Light.otf</string>
    <string name="font_calibre_regular">Calibre-Regular.otf</string>
    <string name="font_calibre_medium">Calibre-Medium.otf</string>
    <string name="font_calibre_semibold">Calibre-Semibold.otf</string>
    <string name="font_calibre_bold">Calibre-Bold.otf</string>
    <string name="karajat">الكراجات</string>
    <string name="alsalmi_road">Alsalmi road</string>
    <string name="alsubiya_road">Alsubiya road</string>
    <string name="alabdali_road">Alabdali road</string>
    <string name="kabd_road">Kabd road</string>
    <string name="alwafara_nuwaiseeb">Alwafara Nuwaiseeb</string>
    <string name="help_on_road">Help on road</string>
    <string name="alasimah">Alasimah</string>
    <string name="al_jahra">Aljahra</string>
    <string name="farwania">Farwania</string>
    <string name="al_ahmadi">Alahmadi</string>
    <string name="hawalli">Hawalli</string>
    <string name="mubarak_alkabir">Mubarak AlKabir</string>
    <string name="title_activity_help_car">Help Car</string>
    <string name="title_activity_scrap">ScrapActivity</string>
    <string name="label_add_photo">Add Poster</string>
    <string name="bai_ul_shara">بيع و شرا</string>
    <string name="showroom">Showroom</string>
    <string name="car_brand_cadillac">كاديلاك</string>
    <string name="dodge">Dodge</string>
    <string name="car_brand_chevrolet">شيفروليه</string>
    <string name="car_brand_gmc">جمس</string>
    <string name="car_brand_ram">رام</string>
    <string name="car_brand_mercury">ميركوري</string>
    <string name="car_brand_fordnlincoln">فورد /لنكون</string>
    <string name="car_brand_hummer">همر</string>
    <string name="car_brand_jeep">جيب</string>
    <string name="rangerover">رنج روفر</string>
    <string name="car_brand_toyota">تويوتا</string>
    <string name="car_brand_nissan">نيسان</string>
    <string name="car_brand_lexus">لكزس</string>
    <string name="car_brand_sheri">شيري</string>
    <string name="car_brand_other">آخرون</string>
    <string name="car_brand_subaru">سوبارو</string>
    <string name="car_brand_isuza">ايسوزو</string>
    <string name="car_brand_mazda">مازدا</string>
    <string name="car_brand_suzuki">سوزوكي</string>
    <string name="car_brand_mitsubishi">ميتسوبيشي</string>
    <string name="car_brand_kia">كيا</string>
    <string name="car_brand_hyundai">هيونداي</string>
    <string name="car_brand_honda">هوندا</string>
    <string name="car_brand_infiniti">انفينتي</string>
    <string name="delivery">سيارة توصيل</string>
    <string name="delivery_title">توصيل قطع</string>
    <string name="car_delivery">سيارة الولادة</string>
    <string name="category_sale">CATEGORY SALE</string>
    <string name="description">Description</string>
    <string name="title_activity_scrap_sub_menu">ScrapSubMenuActivity</string>
    <string name="label_take_photo">Take a photo</string>
    <string name="label_camera_roll">Select from camera roll</string>
    <string name="label_remove_image">
        <u>Remove Image</u>
    </string>
    <string name="message_app_exit">Press again to close the app</string>
    <string name="taxi">Taxi</string>
    <string name="movable_wash">غسيل متنقل</string>
    <string name="tintingcar">حمايه وتظليل</string>
    <string name="technical_examination">Technical examination</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_out_of_memory">
        <![CDATA[<string name=\"error_out_of_memory\">We are unable to process this image</string>
    <string name="msg_5xx">
        <![CDATA[<string name=\"msg_5xx\">Oops!! Something happened. Please try again</string>
    <string name="no_internet_connection">No network connectivity</string>
    <string name="agencies">Agencies</string>
    <string name="title_activity_alwakalat_agency_menu">AlwakalatAgencyMenuActivity</string>
    <string name="title_activity_alwakalat_agency_sub_menu">AlwakalatAgencySubMenuActivity</string>
    <string name="main_info">معلومات اساسيه</string>
    <string name="warranty">الكفالة</string>
    <string name="feature">المزايا</string>
    <string name="contact_us_ar">اتصل بنا</string>
    <string name="title">Title</string>
    <string name="mobile_no">Mobile No</string>
    <string name="price">Price</string>
    <string name="model">Model</string>
    <string name="msg_select_file">Select file to upload</string>
    <string name="no_network_connection">Internet connection in not available.</string>
    <string name="details">المواصفات</string>
    <string name="year">الموديل</string>
    <string name="engine">المحرك</string>
    <string name="transmission">ناقل الحركه</string>
    <string name="jirat">Transmission</string>
    <string name="wheel_drive">نظام الدفع</string>
    <string name="price_arb">السعر</string>
    <string name="dot">•</string>
    <string name="for_more_information_please_call">لمعرفة المزيد يرجى الإتصال</string>
    <string name="american">American</string>
    <string name="asian">Asian</string>
    <string name="european">European</string>
    <string-array name="car_category_title">
        <item>امريكي</item>
        <item>اوروبي</item>
        <item>اسيوي</item>
        <item>السكراب</item>
        <item>مارين</item>
        <item>اكسسوارات</item>
    </string-array>
    <string-array name="car_category_code">
        <item>american</item>
        <item>european</item>
        <item>asian</item>
        <item>scrap</item>
        <item>marine</item>
        <item>accessories</item>
    </string-array>
    <string-array name="car_sub_category_american_title">
        <item>رام</item>
        <item>ميركوري</item>
        <item>امريكي</item>
        <item>جيب</item>
        <item>همر</item>
        <item>فورد /لنكون</item>
        <item>جمس</item>
        <item>شيفروليه</item>
        <item>دودج</item>
        <item>كاديلاك</item>
    </string-array>
    <string-array name="car_sub_category_american_code">
        <item>ram</item>
        <item>mercury</item>
        <item>other</item>
        <item>jeep</item> 
         <item>hummer</item> 
        <item>fordlincoln</item>
        <item>gmc</item> 
         <item>chevrolet</item> 
        <item>dodgechrysler</item>
        <item>Cadillac</item>
    </string-array>
    <string-array name="car_sub_category_european_title">
        <item>اوروبي</item>
        <item>فولفو</item>
        <item>بورش</item>
        <item>اودي</item>
        <item>بيجو / ستروين</item>
        <item>سكودا</item>
        <item>ميني</item>
        <item>رينو</item>
        <item>جاغوار</item>
        <item>فولكس</item>
        <item>رنج روفر</item>
        <item>بي ام دبليو</item>
        <item>مرسيدس</item>
    </string-array>
    <string-array name="car_sub_category_european_code">
        <item>other</item> 
        <item>volvo</item> 
        <item>porsche</item> 
         <item>audi</item> 
         <item>peugeotcitroen</item> 
        <item>skoda</item> 
        <item>mini</item>
        <item>renault</item>
        <item>jaguar</item> 
        <item>volveswagan</item>
        <item>rangerover</item>
         <item>bmw</item> 
        <item>mercedes</item>
    </string-array>
    <string-array name="car_sub_category_asian_title">
        <item>اسيوي</item>
        <item>سوبارو</item>
        <item>ايسوزو</item>
        <item>مازدا</item>
        <item>سوزوكي</item>
        <item>ميتسوبيشي</item>
        <item>كيا</item>
        <item>هيونداي</item>
        <item>هوندا</item>
        <item>انفينتي</item>
        <item>لكزس</item>
        <item>نيسان</item>
        <item>تويوتا</item>
    </string-array>
    <string-array name="car_sub_category_asian_code">
        <item>other</item>
        <item>subaru</item>
        <item>isuzu</item>
        <item>mazda</item>
        <item>suzuki</item>
        <item>mitsubishi</item>
        <item>kia</item>
        <item>hyundai</item>
        <item>honda</item>
        <item>infiniti</item>
        <item>lexus</item>
        <item>nissan</item>
        <item>toyota</item>
    </string-array>
    <string-array name="car_sub_category_scrap_title">
        <item>امريكي</item>
        <item>اوروبي</item>
        <item>اسيوي</item>
    </string-array>
    <string-array name="car_sub_category_scrap_code">
        <item>american</item>
        <item>european</item>
        <item>asian</item>
    </string-array>
    <string-array name="car_sub_category_marine_title">
        <item>قوارب</item>
        <item>جت سكي</item>
        <item>معدات وقطع غيار</item>
    </string-array>
    <string-array name="car_sub_category_marine_code">
        <item>boats</item>
        <item>jetski</item>
        <item>marineequipment</item>
    </string-array>
    <string-array name="car_sub_category_accessories_title">
        <item>امريكي</item>
        <item>اوروبي</item>
        <item>اسيوي</item>
        <item>اكسسوارات</item>
    </string-array>
    <string-array name="car_sub_category_accessories_code">
        <item>american</item>
        <item>european</item>
        <item>asian</item>
        <item>accessories</item>
    </string-array>
    <string name="title_activity_buy_and_sale_sub_menu">BuyAndSaleSubMenuActivity</string>
    <string name="title_activity_buy_and_sale_list">BuyAndSaleListActivity</string>
    <string name="title_activity_buy_and_sale_description">BuyAndSaleDescriptionActivity</string>
    <string name="add_image">Add Image</string>
    <string name="ad_limit_message">You can post maximum two advertisements per day</string>
    <string name="select_region">Select region</string>
    <string name="select_model">Select Model</string>
    <string name="there_is_no_image_to_post">There is no image to post</string>
    <string name="all_fields_are_compulsory">All fields are compulsory</string>
    <string name="ad_successfully_posted">Congratulations! Ad successfully posted.</string>
    <string name="please_select_region_first">Please select region first</string>
    <string name="app_warranty_message">We will provide you with the warranty policy for each
        company
    </string>
    <string name="marine">Marine</string>
    <string name="fiber_vhdadh">Fiber Vhdadh</string>
    <string name="mechanic_and_electricity">Mechanic and Electricity</string>
    <string name="freely_centers">Freely Centers</string>
    <string name="hint_phone">PHONE*</string>
    <string name="hint_password">PASSWORD*</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_message">Please enter your email address below. You will receive a
        link to reset your password.
    </string>
    <string name="forgot_password_hint">Enter your email address</string>
    <string name="resetPassword">Reset password</string>
    <string name="no_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="kuwait_rescue_message">Kuwait\'s volunteer rescue team\n(DESERT and on
        beaches)\nVolunteer work at no charge !! You can take advantage of this section in the event
        of
        service interruptions !!
    </string>
    <string name="founder_of_team">The founder of the team:\nMohammad Saif</string>
    <string name="mp">MP:\nAhmed Saleh</string>
    <string name="operation_section">Operations Section</string>
    <string name="khalid_saif">Khalid Saif</string>
    <string name="abdullah_al_ajmi">Abdullah Al-Ajmi</string>
    <string name="mohsen_al_hajri">Mohsen Al-Hajri</string>
</resources>