<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black"
    android:gravity="bottom"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.arsalan.garage.uicomponents.CustomTextViewEnglish
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/label_add_photo"
            android:textColor="@color/black_dark"

            android:textSize="@dimen/text_size_x_large"
            app:fontName="@string/font_calibre_regular"/>

        <com.arsalan.garage.uicomponents.CustomButton
            android:id="@+id/button_camera"
            style="@style/ButtonStyle.Green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:drawableLeft="@drawable/ic_camera"
            android:drawablePadding="8dp"
            android:gravity="left|center_vertical"
            android:padding="5dp"
            android:text="@string/label_take_photo"
            app:fontName="@string/font_calibre_regular"/>

        <com.arsalan.garage.uicomponents.CustomButton
            android:id="@+id/button_gallery"
            style="@style/ButtonStyle.Red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:drawableLeft="@drawable/ic_gallery"
            android:drawablePadding="8dp"
            android:gravity="left|center_vertical"
            android:padding="5dp"
            android:text="@string/label_camera_roll"
            app:fontName="@string/font_calibre_regular"/>

        <com.arsalan.garage.uicomponents.CustomTextViewEnglish
            android:id="@+id/textview_remove"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:drawableLeft="@drawable/ic_remove_pic"
            android:drawablePadding="8dp"
            android:gravity="left|center_vertical"
            android:padding="5dp"
            android:text="@string/label_remove_image"
            android:textSize="@dimen/text_size_normal"
            android:visibility="gone"
            app:fontName="@string/font_calibre_regular"/>

        <com.arsalan.garage.uicomponents.CustomButton
            android:id="@+id/button_remove"
            style="@style/ButtonStyle.Red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:drawableLeft="@drawable/ic_remove_pic"
            android:drawablePadding="8dp"
            android:gravity="left|center_vertical"
            android:padding="5dp"
            android:text="@string/label_remove_image"
            app:fontName="@string/font_calibre_regular"/>


    </LinearLayout>
</LinearLayout>
