<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="20dp">
    <ImageButton
        android:id="@+id/cancel_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_cross_blue" />
    <com.arsalan.garage.uicomponents.CustomTextViewEnglish
        android:id="@+id/txt_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_password_message"
        android:textSize="@dimen/font_size_normal"
        style="@style/TextViewStyle.Regular.English"
        android:textColor="@color/app_dark_blue"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />
    <com.arsalan.garage.uicomponents.CustomTextViewEnglish
        android:id="@+id/otp_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/font_size_extra_small"
        style="@style/TextViewStyle.Regular.English"
        android:layout_marginBottom="10dp"
        android:visibility="gone"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_email_forgot_password"
        android:layout_below="@id/txt_dialog_message"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        >
        <com.arsalan.garage.uicomponents.CustomEditText
            android:id="@+id/edittext_email_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forgot_password_hint"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:textColor="@color/app_dark_blue"
            style="@style/TextViewStyle.Regular.English"
            />
    </android.support.design.widget.TextInputLayout>

    <com.arsalan.garage.uicomponents.CustomButton
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/resetPassword"
        android:textColor="@color/app_white"
        style="@style/TextViewStyle.Regular.English"
        android:layout_below="@id/input_layout_email_forgot_password"
        android:background="@drawable/selector_button"/>
</RelativeLayout>
