<android.support.design.widget.CoordinatorLayout
    android:id="@+id/content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.arsalan.garage.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_white"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/textview_close"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="-10dp"
            android:layout_marginTop="-10dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_cross_blue"/>

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_close"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_logo"
            android:layout_marginTop="80dp"
            app:errorEnabled="true">
            <com.arsalan.garage.uicomponents.CustomEditText
                android:id="@+id/edittext_phone"
                style="@style/TextViewStyle.Regular.English"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:maxLength="15"
                android:textSize="@dimen/font_size_normal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_phone"
            android:layout_marginTop="0dp"
            app:errorEnabled="true">
            <com.arsalan.garage.uicomponents.CustomEditText
                android:id="@+id/edittext_password"
                style="@style/TextViewStyle.Regular.English"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:textSize="@dimen/font_size_normal"
            />

        </android.support.design.widget.TextInputLayout>

        <com.arsalan.garage.uicomponents.CustomTextViewEnglish
            android:id="@+id/forgotPassword"
            style="@style/TextViewStyle.Regular.English"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/grey_retry"
            android:textSize="@dimen/font_size_normal"
            android:layout_below="@+id/input_layout_password"
            android:layout_alignRight="@+id/button_sign_in"
            android:layout_alignEnd="@+id/button_sign_in"/>
        <com.arsalan.garage.uicomponents.CustomButton
            android:id="@+id/button_sign_in"
            style="@style/TextViewStyle.Regular.English"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotPassword"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/app_white"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_sign_in"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">
            <com.arsalan.garage.uicomponents.CustomTextViewEnglish
                android:id="@+id/noAccount"
                style="@style/TextViewStyle.Regular.English"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/no_account"
                android:textSize="@dimen/font_size_small"/>

            <com.arsalan.garage.uicomponents.CustomTextViewEnglish
                android:id="@+id/textview_signup"
                style="@style/TextViewStyle.Regular.English"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/noAccount"
                android:text="@string/register"
                android:textColor="@color/ASSecondaryPurple"
                android:textSize="@dimen/font_size_small"/>
        </RelativeLayout>
        <com.arsalan.garage.uicomponents.CustomTextViewEnglish
            android:id="@+id/emailError"
            style="@style/TextViewStyle.Regular.English"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button_sign_in"
            android:layout_alignRight="@+id/button_sign_in"
            android:layout_alignTop="@+id/input_layout_phone"
            android:layout_marginTop="20dp"
            android:paddingRight="10dp"
            android:text="Email Error"
            android:textColor="@color/app_bright_red"
            android:textSize="@dimen/font_size_extra_small"
            android:visibility="gone"/>
        <com.arsalan.garage.uicomponents.CustomTextViewEnglish
            android:id="@+id/passwordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/input_layout_phone"
            android:layout_alignRight="@id/input_layout_phone"
            android:layout_below="@id/input_layout_phone"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:paddingRight="10dp"
            android:text="Password Error"
            android:textColor="@color/app_bright_red"
            android:textSize="@dimen/font_size_extra_small"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/imageview_show_assword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/input_layout_password"
            android:layout_alignRight="@+id/input_layout_password"
            android:layout_alignTop="@+id/input_layout_password"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_password"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
